--- a/02.ANGULAR/01.Restaurant/src/client/public/scss/components.scss
+++ b/02.ANGULAR/01.Restaurant/src/client/public/scss/components.scss
@@ -163,6 +163,9 @@ $font-size: 14px;
     &.white {
         .title, .subtitle { color: #fff; }
     }
+    &.no-margin {
+        margin-bottom: 0;
+    }
 }
 
 .star-rating {
