--- a/02.ANGULAR/01.Restaurant/src/client/views/layout/navigation.html
+++ b/02.ANGULAR/01.Restaurant/src/client/views/layout/navigation.html
@@ -17,17 +17,14 @@
   <li class="dropdown" ng-class="{ 'active': isActive('/blog') || isActive('/blog-detail') }"><a href="javascript:void(0)" class="main-menu"><span class="text">blog</span></a>
     <ul class="menu-dropdown">
       <li><a href="#/blog" class="sub-menu"><span class="text">blog</span></a></li>
+      <li><a href="#/blog-left-sidebar" class="sub-menu"><span class="text">blog left sidebar</span></a></li>
       <li><a href="#/blog-detail" class="sub-menu"><span class="text">blog detail</span></a></li>
-      <li class="dropdown-2"><a href="#/blog-detail" class="sub-menu"><span class="text">more page</span></a>
-        <ul class="menu-dropdown-2 right">
-          <li><a href="#/blog" class="sub-menu"><span class="text">blog sidebar left</span></a></li>
-          <li><a href="#/blog-detail" class="sub-menu"><span class="text">blog two column</span></a></li>
-        </ul>
-      </li>
     </ul>
   </li>
   <li class="dropdown"  ng-class="{ 'active': isActive('/404') }"><a href="javascript:void(0)" class="main-menu"><span class="text">pages</span></a>
     <ul class="menu-dropdown">
+      <li><a href="#/event" class="sub-menu"><span class="text">Event</span></a></li>
+      <li><a href="#/gallery" class="sub-menu"><span class="text">Gallery</span></a></li>
       <li><a href="#/404" class="sub-menu"><span class="text">page 404</span></a></li>
     </ul>
   </li>
