--- a/02.ANGULAR/01.Restaurant/src/client/views/layout/coming-soon-1.html
+++ b/02.ANGULAR/01.Restaurant/src/client/views/layout/coming-soon-1.html
@@ -52,15 +52,15 @@
                     <div class="coming-soon-count countdown">
                         <canvas id="timer" class="count-container"></canvas>
                         <div class="count-wrapper">
-                            <div class="time days"><span id="days" class="count"></span></div>
+                            <div class="time days"><span id="days" class="count">{{ timeTillEvent.daysLeft }}</span></div>
                             <div class="time-label">days</div>
                         </div>
                         <div class="count-wrapper">
-                            <div class="time hours"><span id="hours" class="count"></span></div>
+                            <div class="time hours"><span id="hours" class="count">{{ timeTillEvent.hoursLeft }}</span></div>
                             <div class="time-label">hours</div>
                         </div>
                         <div class="count-wrapper">
-                            <div class="time minutes"><span id="minutes" class="count"></span></div>
+                            <div class="time minutes"><span id="minutes" class="count">{{ timeTillEvent.minutesLeft }}</span></div>
                             <div class="time-label">mins</div>
                         </div>
                         <div class="clearfix"></div>
