--- a/02.ANGULAR/01.Restaurant/src/client/views/menu-gird/menu-gird.html
+++ b/02.ANGULAR/01.Restaurant/src/client/views/menu-gird/menu-gird.html
@@ -87,7 +87,7 @@
 </section>
 <section class="banner banner-deserts padding-top-100 padding-bottom-100">
     <div class="container">
-        <div class="main-title-2 white">
+        <div class="main-title-2 white no-margin">
             <div class="icons">//</div>
             <h2 class="title">deserts</h2>
         </div>
@@ -197,7 +197,7 @@
 </div>
 <section class="banner banner-drinks padding-top-100 padding-bottom-100">
     <div class="container">
-        <div class="main-title-2 white">
+        <div class="main-title-2 white no-margin">
             <div class="icons">//</div>
             <h2 class="title">drinks</h2>
         </div>
