update gamba default (add form search for mobile)

--- a/01.HTML/01.Restaurant/_layout.jade
+++ b/01.HTML/01.Restaurant/_layout.jade
@@ -42,9 +42,9 @@ html(lang="en")
             // MENU MOBILE
             .wrapper-menu-mobile
                 != partial("_includes/header/menu-mobile")
-            //- // SEARCH MOBILE
-            //- .wrapper-menu-mobile
-            //-     != partial("_includes/header/menu-mobile")
+            // SEARCH MOBILE
+            .wrapper-search-mobile
+                != partial("_includes/header/search-mobile")
 
             // WRAPPER CONTENT
             .wrapper-content
