--- a/01.HTML/01.Restaurant/assets/css/components.less
+++ b/01.HTML/01.Restaurant/assets/css/components.less
@@ -905,13 +905,15 @@
                     margin-bottom: 0;
                     padding-bottom: 0;
                 }
-                .menu-items.style-2 { 
-                    margin-bottom: 0;
-                }
                 .menu-items.style-3 { 
                     border-bottom: none;
                     margin-bottom: 0;
                     padding-bottom: 0;
+                }
+            }
+            .col-md-6:nth-last-child(-n + 2) {
+                .menu-items.style-2 { 
+                    margin-bottom: 0;
                 }
             }
         }
@@ -3066,6 +3068,22 @@
         width: 100%;
         #googleMap {
             height: 480px;
+        }
+    }
+
+    .text-danger {
+        color: #e74c3c
+    }
+
+    .form-group {
+        margin-bottom: 0;
+    }
+
+    .help-block {
+        margin: 0;
+        ul {
+            text-align: left;
+            margin-bottom: 0;
         }
     }
 
