--- a/01.HTML/02.Restaurant_Dark/assets/css/components.less
+++ b/01.HTML/02.Restaurant_Dark/assets/css/components.less
@@ -3037,7 +3037,7 @@
     }
 
     .contact-form-wrapper {
-        background-color: #f4f6fa;
+        background-color: #202020;
         position: relative;
         .bg-images-pc {
             display: none;
